<resources>
    <string name="app_name">ScheduleCreator</string>
    <string name="pick_start_date">Start date</string>
    <string name="pick_end_date">End date</string>
    <string name="home_view">Home</string>
    <string name="nav_home">Home</string>
    <string name="nav_generator">Generator</string>
    <string name="nav_personnel">Personnel</string>
    <string name="personnelManagementFragmentTitle">Personnel Management</string>
    <string name="new_worker_firstName_tv_text">First Name: </string>
    <string name="new_worker_lastName_tv_text">Last Name: </string>
    <string name="add_new_worker_button_text">ADD WORKER</string>
    <string name="cancel_add_new_worker_button_text">CANCEL</string>
    <string name="new_worker_dialog_title">ADD NEW WORKER</string>
    <string name="no_last_first_name_snackbar_text">First and last name can\'t be empty.</string>
    <string name="worker_added_snackbar_text">Worker added</string>
    <string name="edit_worker_dialog_title">EDIT WORKER</string>
    <string name="edit_worker_dialog_save_changes_button">Save Changes</string>
    <string name="worker_updated_warning_text">Worker updated.</string>
    <string name="generate_schedule_dialog_title">Create schedule with the given options?</string>
    <string name="generate_schedule_dialog_button_text">GENERATE</string>
</resources>