<!-- fragment_edit_name.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    >

    <TextView
        android:id="@+id/add_worker_dialog_title"
        android:text="@string/edit_worker_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="22dp"
        android:layout_marginBottom="4dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/new_worker_firstName_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_worker_firstName_tv_text" />
        <EditText
            android:id="@+id/new_worker_firstName_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="7"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/new_worker_lastName_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_worker_lastName_tv_text"
            />
        <EditText
            android:id="@+id/new_worker_lastName_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="7"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp">

        <Button
            android:id="@+id/save_chages_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_worker_dialog_save_changes_button"
            android:layout_marginLeft="4dp"
            />

        <Button
            android:id="@+id/cancel_edit_worker_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_add_new_worker_button_text"
            android:inputType="text"

            />
    </LinearLayout>

</LinearLayout>